make slug api to fetch all products by category slug